# gestedj

./: .gitignore  AI_DJ_Gestures.mixxx.xml  CLAUDE.md  EasyDJ.spec  GesteDJ.spec  README.md  SETUP_INSTRUCTIONS.md  SYSTEM_OVERVIEW.md  app.py  build_macos_app.sh  hand_detection.py  hand_detection_midi.py  hand_detection_optimized.py  midi_virtual_device.py  requirements.txt
.claude/: settings.local.json
build_specs/: EasyDJ.spec  GesteDJ.spec  gestedj_logo1.icns
gestdj-electron/: .gitignore  CLAUDE.md  PHASE1.md  PHASE2.md  README.md  ROADMAP.md  SESSION_SUMMARY.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
gestdj-electron/python-backend/: README.md  SETUP.md  gesture_processor.py  requirements.txt
gestdj-electron/src/main/: main.js  preload.js
gestdj-electron/src/renderer/: App.tsx  index.html
gestdj-web-ui/: .gitignore  README.md  TESTING_INSTRUCTIONS.md  backend_video_receiver.py  frontend_video_test.html  gestdj_backend_integration.py  requirements.txt  simple_test.html  test_requirements.txt  test_websocket_server.py  video_test.html  video_test_server.py
gestdj-web-ui/backend/: __init__.py
gestdj-web-ui/gestdj-ui/: .gitignore  package-lock.json  package.json
gestdj-web-ui/gestdj-ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
gestdj-web-ui/gestdj-ui/src-tauri/src/: lib.rs  main.rs
gestdj-web-ui/src/: index.ts
images/: EasyDJ_Logo1.icns  gestedj_logo1.icns
mixxx_utils/: AI_DJ_Gestures.midi.xml  ai_dj_jog.js
tests/: quick_test.py
utils/: make_macos_icon.py  midi_virtual_device.py
(+19 files in other folders)
