[package]
name = "gestdj-ui"
version = "0.1.0"
description = "GesteDJ Web UI"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "gestdj_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gestdj-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
